Prepare hobrew tab